--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,6 @@ footer {
 
 .navbar {
   min-height: 92px;
-  display: flex;
   align-items: center;
   position: fixed;
   width: 100%;
@@ -34,6 +33,7 @@ footer {
   justify-content: space-between;
   align-items: center;
   width: 100%;
+  min-height: 92px;
 }
 
 .logo {
@@ -45,6 +45,44 @@ footer {
   font-size: 24px;
   font-weight: bold;
   text-decoration: none;
+}
+
+.p-icon a {
+  color: white;
+  font-size: 5vw;
+  text-decoration: none;
+}
+
+.when-header a {
+  color: #454546;
+  font-size: 6vw;
+  text-decoration: none;
+}
+
+.menu-list {
+  padding: 20px 0;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  text-align: center;
+}
+
+.menu-list li {
+  border-bottom: 1px solid rgb(187, 186, 186);
+  padding-bottom: 18px;
+}
+
+.menu-list li a {
+  color: #172b4d;
+  font-size: 18px;
+  font-weight: lighter;
+  text-decoration: none;
+  font-family: 'Franklin Gothic Heavy', sans-serif;
+}
+
+.line {
+  border-bottom: 1px solid rgb(87, 87, 87);
+  margin-bottom: 24px;
 }
 
 .headline {
@@ -101,12 +139,6 @@ h5 {
   font-size: 4vw;
   margin-top: 25px;
   color: #454546;
-}
-
-.p-icon a {
-  color: white;
-  font-size: 5vw;
-  text-decoration: none;
 }
 
 .social-media-links {
@@ -271,138 +303,133 @@ h5 {
 }
 
 .about-main {
-    text-align: center;
+  text-align: center;
 }
 
 .when {
-    padding-top:40px;
-    font-family: 'Franklin Gothic Heavy', sans-serif;
-    font-weight: bolder;
-    color: #f64634;
+  padding-top: 40px;
+  font-family: 'Franklin Gothic Heavy', sans-serif;
+  font-weight: bolder;
+  color: #f64634;
 }
 
 .when-header {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 12px;
-}
-
-.when-header a{
-  color: #454546;
-  font-size: 6vw;
-  text-decoration: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 12px;
 }
 
 .when-header h3 {
-    font-size: 6vw;
-    padding: 0;
-    margin: 0;
-    color: #454546;
-    font-family: 'Franklin Gothic Heavy', sans-serif;
-
+  font-size: 6vw;
+  padding: 0;
+  margin: 0;
+  color: #454546;
+  font-family: 'Franklin Gothic Heavy', sans-serif;
 }
 
 .about-desc {
-    padding: 12px 24px;
+  padding: 12px 24px;
 }
 
 .about-desc h3 {
-    font-size: 5vw;
-    color: #454546;
-    font-family: 'Franklin Gothic Heavy', sans-serif;
-    margin: 3vw 0;
+  font-size: 5vw;
+  color: #454546;
+  font-family: 'Franklin Gothic Heavy', sans-serif;
+  margin: 3vw 0;
 }
 
 .about-desc p {
-    font-size: 3.4vw;
-    color: #454546;
-    font-family: 'Franklin Gothic Heavy', sans-serif;
-
-
+  font-size: 3.4vw;
+  color: #454546;
+  font-family: 'Franklin Gothic Heavy', sans-serif;
 }
 
 .past-summit {
-    padding: 0 24px;
+  padding: 0 24px;
 }
 
 .summit {
-    min-height: 300px;
-    background: url('../images/summit.jpg');
-    background-size: cover;
-    background-repeat: no-repeat;
-    margin-top: 24px;
+  min-height: 300px;
+  background: url('../images/summit.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  margin-top: 24px;
 }
 
 .summit-2 {
-    background: url('../images/summit2.jpg');
-    background-size: cover;  
+  background: url('../images/summit2.jpg');
+  background-size: cover;
 }
 
 .summit-cover {
-    min-height: 300px;
-    background: rgba(7, 6, 36, 0.575);
-    color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  min-height: 300px;
+  background: rgba(7, 6, 36, 0.575);
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.summit-desc h3{
+.summit-desc h3 {
   font-size: 7vw;
   color: white;
 }
 
-.summit-desc p{
-    font-size: 5vw;
-    color: white;
-  }
+.summit-desc p {
+  font-size: 5vw;
+  color: white;
+}
 
 .about-footer {
-    padding: 24px;
-    margin-top: 24px;
-    background: rgb(55, 55, 66);
-    min-height: 250px;
-    color: white;
-    font-family: 'Franklin Gothic Heavy', sans-serif;
-
+  padding: 24px;
+  margin-top: 24px;
+  background: rgb(55, 55, 66);
+  min-height: 250px;
+  color: white;
+  font-family: 'Franklin Gothic Heavy', sans-serif;
 }
 
 .quick-links {
-    display: flex;
-    justify-content: space-around;
-    padding-bottom: 20px;
-    border-bottom: 1px solid rgb(177, 177, 177);
+  display: flex;
+  justify-content: space-around;
+  padding-bottom: 20px;
+  border-bottom: 1px solid rgb(177, 177, 177);
 }
 
-.quick-links h3{
-    margin-top: 0;
-    margin-bottom: 75px;
-    border-bottom: 2px solid #f64634;
+.quick-links h3 {
+  margin-top: 0;
+  margin-bottom: 75px;
+  border-bottom: 2px solid #f64634;
 }
 
 .q-links {
-    display: flex;
-    flex-direction: column;
-    gap: 3vw;
-
+  display: flex;
+  flex-direction: column;
+  gap: 3vw;
 }
+
 .q-links li a {
-    color: white;
-    text-decoration: none;
-    font-weight: bold;
+  color: white;
+  text-decoration: none;
+  font-weight: bold;
 }
 
 .about-links {
-    margin-top: 18px;
-    justify-content: center;
+  margin-top: 18px;
+  justify-content: center;
 }
+
 .about-links li a {
-    font-size: 3vw;
-    color: white;
-    border: 1px solid white;
+  font-size: 3vw;
+  color: white;
+  border: 1px solid white;
 }
 
 .copyright {
-    text-align: center;
+  text-align: center;
+}
+
+.invisible {
+  display: none;
 }
