fix linter errors

--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,8 @@ footer {
   padding-bottom: 18px;
 }
 
-.menu-list li a, .desktop-menu-list li a {
+.menu-list li a,
+.desktop-menu-list li a {
   color: #172b4d;
   font-size: 22px;
   font-weight: lighter;
@@ -80,8 +81,34 @@ footer {
   font-family: 'Franklin Gothic Heavy', sans-serif;
 }
 
+.social-media-links li a {
+  text-decoration: none;
+  font-size: 4vw;
+  color: #272a31;
+  padding: 12px;
+  border: 2px solid #272a31;
+  border-radius: 50%;
+}
+
+.q-links li a {
+  color: white;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.about-links {
+  margin-top: 18px;
+  justify-content: center;
+}
+
+.about-links li a {
+  font-size: 3vw;
+  color: white;
+  border: 1px solid white;
+}
+
 .desktop-menu-list li a:hover {
-  color:#f64634;
+  color: #f64634;
 }
 
 .desktop-menu-list {
@@ -159,15 +186,6 @@ h5 {
   gap: 12px;
   margin-top: 0;
   padding-top: 0;
-}
-
-.social-media-links li a {
-  text-decoration: none;
-  font-size: 4vw;
-  color: #272a31;
-  padding: 12px;
-  border: 2px solid #272a31;
-  border-radius: 50%;
 }
 
 .main-program-section {
@@ -421,23 +439,6 @@ h5 {
   gap: 3vw;
 }
 
-.q-links li a {
-  color: white;
-  text-decoration: none;
-  font-weight: bold;
-}
-
-.about-links {
-  margin-top: 18px;
-  justify-content: center;
-}
-
-.about-links li a {
-  font-size: 3vw;
-  color: white;
-  border: 1px solid white;
-}
-
 .copyright {
   text-align: center;
 }
@@ -446,7 +447,7 @@ h5 {
   display: none;
 }
 
-@media (min-width: 768px){
+@media (min-width: 768px) {
   .menu-icon {
     display: none;
   }
@@ -454,10 +455,11 @@ h5 {
   .navbar-desktop {
     display: block;
   }
-  
+
   .headline-header h1 {
     font-size: 5vw;
   }
+
   .headline-desc p {
     font-size: 1.8vw;
     line-height: 3vw;
@@ -466,8 +468,13 @@ h5 {
   .headline-date h2 {
     font-size: 3vw;
   }
+
   .headline-date h5 {
     font-size: 2vw;
+  }
+
+  .when-header a {
+    font-size: 2.5vw;
   }
 
   .social-media-links li a {
@@ -486,6 +493,7 @@ h5 {
   .program-article {
     flex-direction: column;
   }
+
   .p-name {
     width: 100%;
   }
@@ -519,13 +527,15 @@ h5 {
     font-size: 2vw;
   }
 
-  .speaker-title p, .speaker-details p{
+  .speaker-title p,
+  .speaker-details p {
     font-size: 1.5vw;
   }
 
   .more-speakers {
     display: none;
   }
+
   .hidden-speakers {
     display: block;
   }
@@ -538,18 +548,15 @@ h5 {
     display: flex;
     justify-content: space-between;
   }
-  
-  .when-header h3 {
-    font-size: 2.5vw;;
-  }
 
-  .when-header a {
+  .when-header h3 {
     font-size: 2.5vw;
   }
 
   .when-desc p {
     font-size: 2vw;
   }
+
   .about-desc h3 {
     font-size: 3vw;
   }
@@ -557,13 +564,14 @@ h5 {
   .about-desc p {
     font-size: 2.2vw;
   }
+
   .summit-images {
     display: flex;
     justify-content: space-between;
     gap: 24px;
   }
+
   .summit {
     width: 100%;
   }
 }
-  
