--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ img {
   position: fixed;
   width: 100%;
   box-sizing: border-box;
-  background: rgba(203, 216, 215, 0.986);
+  background: rgba(240, 240, 240, 0.918);
 }
 
 .navbar-mobile {
@@ -57,7 +57,7 @@ img {
 }
 
 .when-header a {
-  color: rgb(54, 54, 54);
+  color: #454546;
   font-size: 6vw;
   text-decoration: none;
 }
@@ -81,31 +81,12 @@ img {
   font-size: 5vw;
   font-weight: lighter;
   text-decoration: none;
-  font-family: 'Franklin Gothic Heavy', sans-serif;
+  font-family: 'Lato', sans-serif;
 }
 
 .desktop-menu-list li a {
   font-size: 2vw;
-}
-
-.list {
-  font-family: 'Franklin Gothic Heavy', sans-serif;
-  font-weight: lighter;
-  font-size: 1.5vw;
-  margin-left: 8px;
-}
-
-.top-nav {
-  background: #020305;
-  padding: 8px 70px;
-  justify-content: flex-end;
-  display: none;
-}
-
-.top-nav-list {
-  display: flex;
-  align-items: center;
-  gap: 1vw;
+  padding: 5px 8px;
 }
 
 .top-nav-list li a {
@@ -122,13 +103,6 @@ img {
   border-radius: 50%;
 }
 
-.q-links li {
-  color: rgb(177, 173, 173);
-  text-decoration: none;
-  font-weight: bolder;
-  font-size: 10vw;
-}
-
 .about-links li a {
   font-size: 3vw;
   color: white;
@@ -136,7 +110,37 @@ img {
 }
 
 .desktop-menu-list li a:hover {
-  color: #f64634;
+  color: #ec5242;
+}
+
+.desktop-menu-list li a:active {
+  border: #ec5242 2px solid;
+}
+
+.top-nav {
+  background: #020305;
+  padding: 8px 70px;
+  justify-content: flex-end;
+  display: none;
+}
+
+.top-nav-list {
+  display: flex;
+  align-items: center;
+  gap: 1vw;
+}
+
+.list {
+  font-family: 'Lato', sans-serif;
+  font-size: 1.2vw;
+  margin-left: 8px;
+}
+
+.q-links li {
+  color: rgb(177, 173, 173);
+  text-decoration: none;
+  font-weight: bolder;
+  font-size: 10vw;
 }
 
 .desktop-menu-list {
@@ -154,28 +158,29 @@ img {
 
 .headline {
   min-height: 300px;
-  background: url('../images/background1.jpg');
-  background-size: cover;
+  background: url('../images/pngwing.com.png');
+  background-size: auto;
+  background-repeat: no-repeat;
 }
 
 .headline-opacity {
-  background-image: linear-gradient(to bottom, rgba(230, 222, 222, 0.822), rgba(211, 210, 216, 0.972));
-  padding: 130px 24px 60px 24px;
+  padding: 130px 24px 30px 24px;
+  background: rgba(255, 255, 255, 0.678);
 }
 
 .headline-header h1 {
-  font-family: 'Crete Round', Calibri, 'Trebuchet MS', sans-serif;
-  font-weight: bolder;
+  font-family: 'COCOGOOSE', sans-serif;
   padding: 0;
   margin-bottom: 10px;
   margin-top: 0;
-  font-size: 10vw;
+  font-size: 8vw;
   color: #ec5242;
+  line-height: 10vw;
 }
 
 .headline-desc {
-  background: rgba(194, 207, 204, 0.5);
-  border: 2px solid rgba(175, 170, 170, 0.151);
+  background: rgba(255, 255, 255, 0.787);
+  border: 2px solid rgba(238, 238, 238, 0.938);
   padding: 15px;
 }
 
@@ -190,29 +195,30 @@ p {
   color: #ec5242;
   font-size: 4vw;
   margin-bottom: 4px;
-  font-weight: lighter;
+  font-family: 'Lato', sans-serif;
+  font-weight: 400;
 }
 
 .headline-desc p {
   color: #272a31;
-  font-size: 4vw;
+  font-size: 3.5vw;
   line-height: 5.5vw;
-  font-family: 'loto', sans-serif;
-  font-weight: 600;
+  font-family: 'Lato', sans-serif;
+  font-weight: 400;
 }
 
 .headline-date h2,
 h5 {
-  font-size: 6.5vw;
-  font-family: 'Franklin Gothic Heavy', sans-serif;
+  font-size: 6vw;
+  font-family: 'COCOGOOSE', sans-serif;
   color: #272a31;
-  font-weight: bolder;
   margin-bottom: 0;
 }
 
 .headline-date h5 {
-  font-size: 4vw;
+  font-size: 3.5vw;
   margin-top: 5px;
+  font-family: 'Lato', sans-serif;
   color: #272a31;
 }
 
@@ -236,7 +242,7 @@ h5 {
   background-repeat: no-repeat;
   padding: 0 24px;
   color: white;
-  font-family: 'Franklin Gothic Heavy', sans-serif;
+  font-family: 'Lato', sans-serif;
   padding-bottom: 44px;
 }
 
@@ -259,7 +265,7 @@ h5 {
   padding: 12px 24px;
   display: flex;
   align-items: center;
-  background: rgba(88, 88, 88, 0.418);
+  background: rgba(211, 211, 211, 0.233);
   min-height: 75px;
   gap: 4vw;
   margin: 10px 0;
@@ -305,7 +311,7 @@ h5 {
 .speakers-section {
   padding: 44px 24px;
   min-height: 400px;
-  font-family: 'Franklin Gothic Heavy', sans-serif;
+  font-family: 'Lato', sans-serif;
 }
 
 .speaker-card {
@@ -394,9 +400,8 @@ h5 {
 
 .when {
   padding-top: 20px;
-  font-family: 'Franklin Gothic Heavy', sans-serif;
-  font-weight: bolder;
-  color: #272a31;
+  font-family: 'Lato', sans-serif;
+  color: #454546;
 }
 
 .when-header {
@@ -404,14 +409,15 @@ h5 {
   align-items: center;
   justify-content: center;
   gap: 12px;
+  font-family: 'Lato', sans-serif;
 }
 
 .when-header h3 {
   font-size: 6vw;
   padding: 0;
   margin: 0;
-  color: #272a31;
-  font-family: 'Franklin Gothic Heavy', sans-serif;
+  color: #454546;
+  font-weight: 700;
 }
 
 .about-desc {
@@ -430,14 +436,14 @@ h5 {
 .about-desc h3 {
   font-size: 5vw;
   color: #454546;
-  font-family: 'Franklin Gothic Heavy', sans-serif;
+  font-family: 'Lato', sans-serif;
   margin: 1vw 0;
 }
 
 .about-desc p {
   font-size: 3.4vw;
   color: #454546;
-  font-family: 'Franklin Gothic Heavy', sans-serif;
+  font-family: 'Lato', sans-serif;
 }
 
 .past-summit {
@@ -481,7 +487,7 @@ h5 {
   background: rgb(66, 65, 65);
   min-height: 260px;
   color: white;
-  font-family: 'Franklin Gothic Heavy', sans-serif;
+  font-family: 'Lato', sans-serif;
 }
 
 .home-footer {
@@ -522,6 +528,12 @@ h5 {
   margin: 0;
 }
 
+.about-copyright {
+  background: rgb(66, 65, 65);
+  color: white;
+  min-height: 260px;
+}
+
 .about-headline {
   display: flex;
   flex-direction: column;
@@ -554,12 +566,13 @@ h5 {
   }
 
   .headline-header h1 {
-    font-size: 5vw;
+    font-size: 7vw;
+    line-height: 7.3vw;
   }
 
   .headline-desc p {
-    font-size: 1.8vw;
-    line-height: 3vw;
+    font-size: 1.5vw;
+    line-height: 2.5vw;
   }
 
   .headline-date h2 {
@@ -697,11 +710,16 @@ h5 {
   }
 
   .when-desc p {
-    font-size: 2vw;
+    font-size: 1.5vw;
+    color: #272a31;
   }
 
   .about-desc h3 {
-    font-size: 3vw;
+    font-size: 2.3vw;
+  }
+
+  .about-headline h1 {
+    font-size: 6vw;
   }
 
   .q-links li {
@@ -709,7 +727,8 @@ h5 {
   }
 
   .about-desc p {
-    font-size: 2.2vw;
+    font-size: 1.5vw;
+    line-height: 3vw;
   }
 
   .summit-images {
